add order urgency
